fix control menu z-index

--- a/src/pages/Home/HomePage.module.css
+++ b/src/pages/Home/HomePage.module.css
@@ -90,6 +90,10 @@
 				transform: translateY(calc(100% + 5px));
 			}
 		}
+
+		.control-menu {
+			z-index: 1;
+		}
 	}
 }
 
